add new feats logout and realms fetching

--- a/front/KycManager/src/app/components/admin/dashboard/dashboard.component.html
+++ b/front/KycManager/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="my-5"></div>
 <div class="my-5"></div>
 <section class="grid grid-cols-1 my-4 xl:grid-cols-2 2xl:grid-cols-3 gap-5">
-  <app-userstable></app-userstable>
+  <app-realmstable></app-realmstable>
   <div class="2xl:col-span-2">
   </div>
 </section>
