--- a/front/KycManager/src/app/components/root_component/app.component.html
+++ b/front/KycManager/src/app/components/root_component/app.component.html
@@ -4,61 +4,13 @@
   </router-outlet>
   <app-footer class="mt-20"></app-footer>
 </div>
+
 <div *ngIf="isLoggedIn()">
-  <div *ngIf="!isAdmin">
-    <div *ngIf="!isEmailValid" [@fadeInOut]>
-      <mat-toolbar class="mat-elevation-z3">
-        <app-cercularnav></app-cercularnav>
-        <div class="flexible-right" style="position: relative">
-          <div id="create-account-button" mat-button color="primary" class="flex create">
-            <div class="flex items-center space-x-6">
-              <a (click)="logout()"
-                class="cursor-pointer flex items-center space-x-2 text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">
-                <mat-icon>logout</mat-icon>
-                <span>Logout</span>
-              </a>
-              <div class="h-6 bg-gray-500 dark:bg-gray-600 w-1"></div>
-            </div>
-          </div>
-        </div>
-      </mat-toolbar>
+  <div>
+    <div>
+      <app-nav-bar class="fixed top-0 w-full bg-white shadow-md z-50"></app-nav-bar>
       <router-outlet>
         <app-loading-spinner *ngIf="loading"></app-loading-spinner>
       </router-outlet>
     </div>
-    <div *ngIf="isEmailValid" [@fadeInOut]>
-      <mat-toolbar class="mat-elevation-z3">
-        <app-cercularnav></app-cercularnav>
-        <button id="al" aria-label="Name" class="mat-icon-button" mat-icon-button (click)="collapsed.set(!collapsed())">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </mat-toolbar>
-      <mat-sidenav-container>
-        <mat-sidenav opened mode="side" [style.width]="sidenavWidth()">
-        </mat-sidenav>
-        <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
-          <router-outlet>
-            <app-loading-spinner *ngIf="loading"></app-loading-spinner>
-          </router-outlet>
-        </mat-sidenav-content>
-      </mat-sidenav-container>
-    </div>
   </div>
-  <div *ngIf="isAdmin" [@fadeInOut]>
-    <mat-toolbar class="mat-elevation-z3">
-      <app-cercularnav></app-cercularnav>
-      <button class="mat-icon-button" mat-icon-button (click)="collapsed.set(!collapsed())">
-        <mat-icon>menu</mat-icon>
-      </button>
-    </mat-toolbar>
-    <mat-sidenav-container>
-      <mat-sidenav opened mode="side" [style.width]="sidenavWidth()">
-      </mat-sidenav>
-      <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
-        <router-outlet>
-          <app-loading-spinner *ngIf="loading"></app-loading-spinner>
-        </router-outlet>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  </div>
-</div>
