--- a/front/KycManager/src/app/components/login/login.component.html
+++ b/front/KycManager/src/app/components/login/login.component.html
@@ -8,8 +8,8 @@
     >
       <img class="w-8 h-8 mr-2" src="assets/logosg.png" alt="logo" />
       <span class="text-2xl font-semibold text-primary-500">
-        Welcome Back To
-        <span class="text-2xl font-semibold text-red-700">SOGE-SIGN</span></span
+        Welcome To
+        <span class="text-2xl font-semibold text-red-700">KYC-MANAGER</span></span
       >
     </a>
     <div
